language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_prefix_string_alias_in_let_assert.snap
---
source: language-server/src/tests/reference.rs
expression: "\npub fn main() -> String {\n  let assert \"1\" as digit <> _rest = \"1-wibble\"\n  digit\n}\n"
---
-- app.gleam

pub fn main() -> String {
  let assert "1" as digit <> _rest = "1-wibble"
                    ↑▔▔▔▔                      
  digit
  ▔▔▔▔▔
}
